@@ -1,3 +1,8 @@
+03/11/2011 Changes
+
+Added support for temporaries - getting and setting.
+
+
 02/11/2011 Changes
 
 Added a 'context' parameter to each method call to contain the call context items, like class method 
